--- a/src/styles/components/educationItem.scss
+++ b/src/styles/components/educationItem.scss
@@ -17,6 +17,42 @@
     &__date {
         margin: 20px 0;
     }
+
+    &__projects {
+        margin: 14px 0px;
+        h4 {
+            font-size: 20px;
+        }
+
+        &__container {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 20px;
+            margin-top: 12px;
+
+            &__project {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 10px;
+                width: 100%;
+                max-width: 350px;
+                border-radius: 4px;
+                overflow: hidden;
+                text-decoration: none;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+                p{
+                    font-size: 18px;
+                    color: #fff;
+                }
+            }
+        }
+    }
 }
 
 
@@ -33,7 +69,7 @@
 
 @include media-up(lg) {
     .education__educationItem {
-        height: 220px;
+        // height: 220px;
         margin: 30px auto;
         text-align: start;
     }
